Changelog
=========

2020.1.0rc2 (unreleased)
------------------------

- Implement the teamraum client authentication flow. [elioschmutz]
- Implement the workspace client to make requests to a teamraum from GEVER. [elioschmutz]
- Implement the workspace client authentication flow. [elioschmutz]
- Handle deployments with no repository in navigation endpoint. [njohner]
- Add documentation for sharing endpoint. [njohner]
- Always request UID from solr, as it is needed for snippets. [njohner]
- Speed up validation of dossier resolution preconditions. [njohner]
- Generally disallow to move proposals outside of its main dossier. [elioschmutz]
- Add tabbedview move action for proposals. [elioschmutz]


2020.1.0rc1 (2020-01-30)
------------------------

- Fix JS ordering issue: define overlayhelpers.js position. [njohner]
- Add French API and admin documentations. [njohner]
- Fix volatile related proposal documents. [elioschmutz]
- Add a button to create a task from a proposal. [elioschmutz]
- Allow to unlock and edit submitted documents in a submitted proposal. [elioschmutz]
- Add new_document_from_task file_action. [lgraf]
- Implement PossibleWorkspaceFolderParticipantsVocabulary to get all possible workspace folder participants. [elioschmutz]
- Implement GET, PATCH and POST @participations endpoint for workspace folders. [elioschmutz]
- Implement @role-inheritance serivce endpoint for workspace folders. [deiferni]
- Include permissions.zcml of Products.CMFEditions. [lgraf]
- Add action to create new invitations to workspaces. [deiferni]
- Return creator of workspace in GET, make sure he is a WorkspaceAdministrator upon workspace creation. Get rid of WorkspaceOwner role. [deiferni]
- Allow invitations to external users through E-mails. [njohner]
- Update invitation and participation GET json response format. [deiferni]
- Add missing french translation for example repository root. [elioschmutz]
- Always use API for OfficeConnector. [njohner]