@@ -1,0 +1,16 @@
+<object xmlns:i18n="http://xml.zope.org/namespaces/i18n" name="portal_actions" meta_type="Plone Actions Tool">
+
+  <object name="folder_buttons" meta_type="CMF Action Category">
+
+    <object name="create_task" meta_type="CMF Action" i18n:domain="opengever.core">
+      <property name="title" i18n:translate="">Create Task</property>
+      <property name="description" i18n:translate="" />
+      <property name="url_expr">string:++add++opengever.task.task:method</property>
+      <property name="icon_expr" />
+      <property name="available_expr">object/@@folder_buttons_availability/is_create_task_available</property>
+      <property name="visible">True</property>
+    </object>
+
+  </object>
+
+</object>
